# lab-kiro

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/skills/codificar/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/design-system/: SKILL.md
.claude/skills/documentar/: SKILL.md
.claude/skills/novo-projeto/: SKILL.md
.claude/skills/planejar/: SKILL.md
.claude/skills/refatorar/: SKILL.md
.claude/skills/revisar/: SKILL.md
.claude/skills/secure-coding/: SKILL.md
.claude/skills/setup-projeto/: SKILL.md
.claude/skills/testar/: SKILL.md
.github/workflows/: guardrails.yml  security.yml
.kiro/hooks/: auto-test-on-save.kiro.hook  lint-on-save.kiro.hook  security-check.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: product.md  tech.md
